--- a/index.ipynb
+++ b/index.ipynb
@@ -37,10 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "zero_to_three = [0, 1, 2, 3]"
@@ -55,11 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "print(zero_to_three[0])\n",
     "print(zero_to_three[1])\n",
@@ -82,14 +88,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "for i in [0, 1, 2]:\n",
-    "    print(i + 5)"
+    "for i in zero_to_three:\n",
+    "    print(i+)"
    ]
   },
   {
@@ -111,12 +126,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n",
+      "7\n",
+      "Whatuppppp\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "for i in [0, 1, 2]:\n",
     "    print(i + 5)\n",
+    "print ('Whatuppppp')\n",
     "print(10)"
    ]
   },
@@ -129,15 +157,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "for number in [0, 1, 2]:\n",
-    "    print(number + 5)"
+    "for number in zero_to_three:\n",
+    "    print(number)"
    ]
   },
   {
@@ -149,14 +187,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-5\n",
+      "-4\n",
+      "-3\n"
+     ]
+    }
+   ],
    "source": [
     "for number in [0, 1, 2]:\n",
-    "    print(what + 5)"
+    "    print(number- 5)"
    ]
   },
   {
@@ -182,11 +228,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Croatia\n",
+      "USA\n",
+      "Argentina\n"
+     ]
+    }
+   ],
    "source": [
     "countries = ['Croatia', 'USA', 'Argentina']\n",
     "for i in [0, 1, 2]:\n",
@@ -202,14 +256,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Croatia\n",
+      "2\n",
+      "USA\n",
+      "3\n",
+      "Argentina\n"
+     ]
+    }
+   ],
    "source": [
     "for i in [0, 1, 2]:\n",
-    "    print(i)\n",
+    "    print(i+1)\n",
     "    print(countries[i])"
    ]
   },
@@ -222,11 +287,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "Croatia\n",
+      "1\n",
+      "USA\n",
+      "2\n",
+      "Argentina\n",
+      "3\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-f72f20b78fac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcountries\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "for i in [0, 1, 2, 3]:\n",
     "    print(i)\n",
@@ -276,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +373,7 @@
        "range(0, 3)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,22 +391,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 2]"
+       "[0, 1, 2, 3]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(range(0, len(countries)))"
+    "mia=list(range(0, len(countries)))\n",
+    "mia"
    ]
   },
   {
@@ -330,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +433,7 @@
     }
    ],
    "source": [
-    "for i in list(range(0, len(countries))):\n",
+    "for i in mia:\n",
     "    print(countries[i])"
    ]
   },
@@ -357,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +463,7 @@
    "source": [
     "countries = ['Croatia', 'USA', 'Argentina']\n",
     "countries.append('Mexico')\n",
-    "for i in list(range(0, len(countries))):\n",
+    "for i in mia:\n",
     "    print(countries[i])"
    ]
   },
@@ -449,21 +538,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bob\n",
-      "Sally\n",
-      "Fred\n"
+      "Erica\n",
+      "Jill\n",
+      "Kim\n",
+      "Lisa\n",
+      "Carla\n",
+      "Amanda\n"
      ]
     }
    ],
    "source": [
-    "friends = ['Bob', 'Sally', 'Fred']\n",
+    "friends = ['Erica', 'Jill', 'Kim', 'Lisa', 'Carla', 'Amanda']\n",
     "for friend in friends:\n",
     "    print(friend)"
    ]
@@ -506,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
